clear filters button added pop scope added, search by name and phone added

--- a/lib/l10n/intl_bg.arb
+++ b/lib/l10n/intl_bg.arb
@@ -50,7 +50,7 @@
   "totalPriceServicePerDay": "Обща цена на услугата на ден",
   "saveEmployee": "Запазване на служител",
   "numberOfServiceForMonth": "Брой услуги за месеца",
-  "hello":" Здравей, ",
+  "hello": " Здравей, ",
   "addReport": "Добавяне на отчет",
   "nameOfClient": "Име на клиент",
   "lastNameOfClient": "Фамилия на клиента",
@@ -81,8 +81,8 @@
   "exit": "Изход",
   "areYouSureYouWantToExitTheApp": "Сигурни ли сте? Искате да излезете от приложението.",
   "exitApp": "Изход от приложението",
-   "yes":"да да",
-  "no":"не не",
+  "yes": "да да",
+  "no": "не не",
   "costsFilter": "Филтър за разходи",
   "clear": "Ясно",
   "nameOfCost": "Име на цената",
@@ -125,7 +125,7 @@
   "priceRange": "Ценови диапазон",
   "dates": "Дати",
   "from": "От",
-  "to":"тото",
+  "to": "тото",
   "masters": "Майстори",
   "services": "Услуги",
   "selectLanguage": "Избор на език",
@@ -133,41 +133,50 @@
   "relatedncategories": "Свързани\nкатегории",
   "deductednfromTax": "Приспаднат\nот ДАНЪКА",
   "systematicnexpenditure": "Систmatic\nРазходи",
- "deleteCost": "Изтриване на разходите",
- "areYouSureYouWantToDeleteThisCost": "Сигурни ли сте, че искате да изтриете тази цена?",
- "noData": "Няма данни",
- "regncus": "Reg\nCus",
- "cardnpay": "Плащане с карта\n",
- "employeendata": "Данни за \nслужителя",
- "customerndata": "Клиентски\nданни",
- "newncus": "Нов\nCus",
- "total": "Общо",
- "deleted": "Изтрит",
- "itemDeleted": "Елементът е изтрит",
- "deleteCategory": "Изтриване на категория",
- "areYouSureYouWantToDeleteThisCategory": "Сигурни ли сте, че искате да изтриете тази категория?",
- "deleteService": "Изтриване на услуга",
- "areYouSureYouWantToDeleteThisService": "Сигурни ли сте, че искате да изтриете тази услуга?",
- "noServicesFoundnpleaseAddANewService": "Няма намерени услуги\nМоля, добавете нова услуга",
- "backupRestoredSuccessfully": "Архивирането е възстановено успешно!",
- "reloadApp": "Презареждане на приложението",
- "restoringDatabase": "Възстановява се база данни...",
- "exported": "Експортирано",
- "checkYourFileInTheDownloadsFolder": "Проверете файла си в папката за изтегляния",
- "selectTheDatabaseToRestore": "Изберете базата данни за възстановяване",
- "reportssalesTracker": "Отчети/Проследяване на продажби",
- "costsTracker": "Проследяване на разходите",
- "clearDates": "Изчистване на дати",
- "anErrorOccurred": "Възникна грешка",
- "noDataFound": "Няма намерени данни",
- "masternname": "Главно\nиме",
- "noRegnclient": "No. Reg\nClient",
- "noNewnclient": "Не. Нов\nклиент",
- "noOfnservices": "Брой\nуслуги",
- "cost": "Цена",
- "newnclient": "Нов\nклиент",
- "regnclient": "Регистрационен\nклиент",
- "numOfnservices": "Брой\nуслуги",
- "costs": "разходи",
- "sales": "Продажби"
+  "deleteCost": "Изтриване на разходите",
+  "areYouSureYouWantToDeleteThisCost": "Сигурни ли сте, че искате да изтриете тази цена?",
+  "noData": "Няма данни",
+  "regncus": "Reg\nCus",
+  "cardnpay": "Плащане с карта\n",
+  "employeendata": "Данни за \nслужителя",
+  "customerndata": "Клиентски\nданни",
+  "newncus": "Нов\nCus",
+  "total": "Общо",
+  "deleted": "Изтрит",
+  "itemDeleted": "Елементът е изтрит",
+  "deleteCategory": "Изтриване на категория",
+  "areYouSureYouWantToDeleteThisCategory": "Сигурни ли сте, че искате да изтриете тази категория?",
+  "deleteService": "Изтриване на услуга",
+  "areYouSureYouWantToDeleteThisService": "Сигурни ли сте, че искате да изтриете тази услуга?",
+  "noServicesFoundnpleaseAddANewService": "Няма намерени услуги\nМоля, добавете нова услуга",
+  "backupRestoredSuccessfully": "Архивирането е възстановено успешно!",
+  "reloadApp": "Презареждане на приложението",
+  "restoringDatabase": "Възстановява се база данни...",
+  "exported": "Експортирано",
+  "checkYourFileInTheDownloadsFolder": "Проверете файла си в папката за изтегляния",
+  "selectTheDatabaseToRestore": "Изберете базата данни за възстановяване",
+  "reportssalesTracker": "Отчети/Проследяване на продажби",
+  "costsTracker": "Проследяване на разходите",
+  "clearDates": "Изчистване на дати",
+  "anErrorOccurred": "Възникна грешка",
+  "noDataFound": "Няма намерени данни",
+  "masternname": "Главно\nиме",
+  "noRegnclient": "No. Reg\nClient",
+  "noNewnclient": "Не. Нов\nклиент",
+  "noOfnservices": "Брой\nуслуги",
+  "cost": "Цена",
+  "newnclient": "Нов\nклиент",
+  "regnclient": "Регистрационен\nклиент",
+  "numOfnservices": "Брой\nуслуги",
+  "costs": "разходи",
+  "sales": "Продажби",
+  "pleaseAddACategoryFirstToAddAnEmployee": "Моля, първо добавете категория, за да добавите служител",
+  "addCategoryFirst": "Първо добавяне на категория",
+  "logout": "Изход",
+  "areYouSureYouWantToLogout": "Сигурни ли сте? Искате да излезете.",
+  "graphics": "Графики",
+  "results": "Резултати",
+  "reports": "Отчети",
+  "error": "Грешка",
+  "loginOrPasswordIsIncorrect": "Потребителското име или паролата са неправилни"
 }
