--- a/lib/l10n/intl_cs.arb
+++ b/lib/l10n/intl_cs.arb
@@ -50,7 +50,7 @@
   "totalPriceServicePerDay": "Celková cena služby za den",
   "saveEmployee": "Uložit zaměstnance",
   "numberOfServiceForMonth": "Počet služeb za měsíc",
-  "hello":"Ahoj ahoj, ",
+  "hello": "Ahoj ahoj, ",
   "addReport": "Přidat přehled",
   "nameOfClient": "Jméno klienta",
   "lastNameOfClient": "Příjmení klienta",
@@ -81,7 +81,7 @@
   "exit": "Exit",
   "areYouSureYouWantToExitTheApp": "Jste si jistý? Chcete aplikaci ukončit.",
   "exitApp": "Ukončit aplikaci",
-  "yes":"Ano ano",
+  "yes": "Ano ano",
   "no": "Ne",
   "costsFilter": "Filtr nákladů",
   "clear": "Clear",
@@ -133,41 +133,50 @@
   "relatedncategories": "Související\nkategorie",
   "deductednfromTax": "Odečteno\nZ DANĚ",
   "systematicnexpenditure": "Systmatic\nVýdaje",
- "deleteCost": "Smazat cenu",
- "areYouSureYouWantToDeleteThisCost": "Opravdu chcete smazat tyto náklady?",
- "noData": "Žádná data",
- "regncus": "Reg\nCus",
- "cardnpay": "Karta\nZaplatit",
- "employeendata": "Zaměstnanec\nData",
- "customerndata": "Zákazník\nData",
- "newncus": "Nový\nCus",
- "total": "Celkem",
- "deleted": "Smazáno",
- "itemDeleted": "Položka smazána",
- "deleteCategory": "Smazat kategorii",
- "areYouSureYouWantToDeleteThisCategory": "Opravdu chcete smazat tuto kategorii?",
- "deleteService": "Smazat službu",
- "areYouSureYouWantToDeleteThisService": "Opravdu chcete smazat tuto službu?",
- "noServicesFoundnpleaseAddANewService": "Nenalezeny žádné služby\nPřidejte prosím novou službu",
- "backupRestoredSuccessfully": "Záloha byla úspěšně obnovena!",
- "reloadApp": "Znovu načíst aplikaci",
- "restoringDatabase": "Obnovuji databázi...",
- "exported": "Exportováno",
- "checkYourFileInTheDownloadsFolder": "Zkontrolujte svůj soubor ve složce Stažené soubory",
- "selectTheDatabaseToRestore": "Vyberte databázi k obnovení",
- "reportssalesTracker": "Sledování přehledů/prodejů",
- "costsTracker": "Sledování nákladů",
- "clearDates": "Vymazat data",
- "anErrorOccurred": "Došlo k chybě",
- "noDataFound": "Nebyla nalezena žádná data",
- "masternname": "Mistr\nJméno",
- "noRegnclient": "Ne. Reg\nKlient",
- "noNewnclient": "Ne. Nový\nKlient",
- "noOfnservices": "Počet\nslužeb",
- "cost": "Cena",
- "newnclient": "Nový\nKlient",
- "regnclient": "Reg\nKlient",
- "numOfnservices": "Počet\nSlužeb",
- "costs": "náklady",
- "sales": "Prodej"
+  "deleteCost": "Smazat cenu",
+  "areYouSureYouWantToDeleteThisCost": "Opravdu chcete smazat tyto náklady?",
+  "noData": "Žádná data",
+  "regncus": "Reg\nCus",
+  "cardnpay": "Karta\nZaplatit",
+  "employeendata": "Zaměstnanec\nData",
+  "customerndata": "Zákazník\nData",
+  "newncus": "Nový\nCus",
+  "total": "Celkem",
+  "deleted": "Smazáno",
+  "itemDeleted": "Položka smazána",
+  "deleteCategory": "Smazat kategorii",
+  "areYouSureYouWantToDeleteThisCategory": "Opravdu chcete smazat tuto kategorii?",
+  "deleteService": "Smazat službu",
+  "areYouSureYouWantToDeleteThisService": "Opravdu chcete smazat tuto službu?",
+  "noServicesFoundnpleaseAddANewService": "Nenalezeny žádné služby\nPřidejte prosím novou službu",
+  "backupRestoredSuccessfully": "Záloha byla úspěšně obnovena!",
+  "reloadApp": "Znovu načíst aplikaci",
+  "restoringDatabase": "Obnovuji databázi...",
+  "exported": "Exportováno",
+  "checkYourFileInTheDownloadsFolder": "Zkontrolujte svůj soubor ve složce Stažené soubory",
+  "selectTheDatabaseToRestore": "Vyberte databázi k obnovení",
+  "reportssalesTracker": "Sledování přehledů/prodejů",
+  "costsTracker": "Sledování nákladů",
+  "clearDates": "Vymazat data",
+  "anErrorOccurred": "Došlo k chybě",
+  "noDataFound": "Nebyla nalezena žádná data",
+  "masternname": "Mistr\nJméno",
+  "noRegnclient": "Ne. Reg\nKlient",
+  "noNewnclient": "Ne. Nový\nKlient",
+  "noOfnservices": "Počet\nslužeb",
+  "cost": "Cena",
+  "newnclient": "Nový\nKlient",
+  "regnclient": "Reg\nKlient",
+  "numOfnservices": "Počet\nSlužeb",
+  "costs": "náklady",
+  "sales": "Prodej",
+  "pleaseAddACategoryFirstToAddAnEmployee": "Pro přidání zaměstnance nejprve přidejte kategorii",
+  "addCategoryFirst": "Nejprve přidat kategorii",
+  "logout": "Odhlásit se",
+  "areYouSureYouWantToLogout": "Jste si jistý? Chcete se odhlásit.",
+  "graphics": "Graphics",
+  "results": "Výsledky",
+  "reports": "Reports",
+  "error": "Chyba",
+  "loginOrPasswordIsIncorrect": "Přihlašovací jméno nebo heslo je nesprávné"
 }
