--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -133,41 +133,50 @@
   "relatedncategories": "Verwandte\nKategorien",
   "deductednfromTax": "Von der STEUER abgezogen",
   "systematicnexpenditure": "Systemmatic\nExpenditure",
-"deleteCost": "Kosten löschen",
-"areYouSureYouWantToDeleteThisCost": "Möchten Sie diese Kosten wirklich löschen?",
-"noData": "Keine Daten",
-"regncus": "Reg\nCus",
-"cardnpay": "Card\nPay",
-"employeendata": "Mitarbeiterdaten",
-"customerndata": "Kundendaten",
-"newncus": "Neuer\nCus",
-"total": "Gesamt",
-"deleted": "Gelöscht",
-"itemDeleted": "Artikel gelöscht",
-"deleteCategory": "Kategorie löschen",
-"areYouSureYouWantToDeleteThisCategory": "Möchten Sie diese Kategorie wirklich löschen?",
-"deleteService": "Dienst löschen",
-"areYouSureYouWantToDeleteThisService": "Sind Sie sicher Sie möchten diesen Dienst löschen?",
-"noServicesFoundnpleaseAddANewService": "Keine Dienste gefunden\nBitte fügen Sie einen neuen Dienst hinzu",
-"backupRestoredSuccessfully": "Backup erfolgreich wiederhergestellt!",
-"reloadApp": "App neu laden",
-"restoringDatabase": "Datenbank wird wiederhergestellt...",
-"exported": "Exportiert",
-"checkYourFileInTheDownloadsFolder": "Überprüfen Sie Ihre Datei im Download-Ordner",
-"selectTheDatabaseToRestore": "Wählen Sie die wiederherzustellende Datenbank aus",
-"reportssalesTracker": "Berichte/Verkaufs-Tracker",
-"costsTracker": "Kosten-Tracker",
-"clearDates": "Daten löschen",
-"anErrorOccurred": "Ein Fehler ist aufgetreten",
-"noDataFound": "Keine Daten gefunden",
-"masternname": "Master\nName",
-"noRegnclient": "Nein. Reg\nClient",
-"noNewnclient": "Anzahl neuer\nClients",
-"noOfnservices": "Anzahl\nDienste",
-"cost": "Kosten",
-"newnclient": "Neuer\nClient",
-"regnclient": "Reg\nClient",
-"numOfnservices": "Anzahl\nDienste",
-"costs": "Kosten",
-"sales": "Verkäufe"
+  "deleteCost": "Kosten löschen",
+  "areYouSureYouWantToDeleteThisCost": "Möchten Sie diese Kosten wirklich löschen?",
+  "noData": "Keine Daten",
+  "regncus": "Reg\nCus",
+  "cardnpay": "Card\nPay",
+  "employeendata": "Mitarbeiterdaten",
+  "customerndata": "Kundendaten",
+  "newncus": "Neuer\nCus",
+  "total": "Gesamt",
+  "deleted": "Gelöscht",
+  "itemDeleted": "Artikel gelöscht",
+  "deleteCategory": "Kategorie löschen",
+  "areYouSureYouWantToDeleteThisCategory": "Möchten Sie diese Kategorie wirklich löschen?",
+  "deleteService": "Dienst löschen",
+  "areYouSureYouWantToDeleteThisService": "Sind Sie sicher Sie möchten diesen Dienst löschen?",
+  "noServicesFoundnpleaseAddANewService": "Keine Dienste gefunden\nBitte fügen Sie einen neuen Dienst hinzu",
+  "backupRestoredSuccessfully": "Backup erfolgreich wiederhergestellt!",
+  "reloadApp": "App neu laden",
+  "restoringDatabase": "Datenbank wird wiederhergestellt...",
+  "exported": "Exportiert",
+  "checkYourFileInTheDownloadsFolder": "Überprüfen Sie Ihre Datei im Download-Ordner",
+  "selectTheDatabaseToRestore": "Wählen Sie die wiederherzustellende Datenbank aus",
+  "reportssalesTracker": "Berichte/Verkaufs-Tracker",
+  "costsTracker": "Kosten-Tracker",
+  "clearDates": "Daten löschen",
+  "anErrorOccurred": "Ein Fehler ist aufgetreten",
+  "noDataFound": "Keine Daten gefunden",
+  "masternname": "Master\nName",
+  "noRegnclient": "Nein. Reg\nClient",
+  "noNewnclient": "Anzahl neuer\nClients",
+  "noOfnservices": "Anzahl\nDienste",
+  "cost": "Kosten",
+  "newnclient": "Neuer\nClient",
+  "regnclient": "Reg\nClient",
+  "numOfnservices": "Anzahl\nDienste",
+  "costs": "Kosten",
+  "sales": "Verkäufe",
+  "pleaseAddACategoryFirstToAddAnEmployee": "Bitte fügen Sie zuerst eine Kategorie hinzu, um einen Mitarbeiter hinzuzufügen",
+  "addCategoryFirst": "Kategorie zuerst hinzufügen",
+  "logout": "Abmelden",
+  "areYouSureYouWantToLogout": "Sind Sie sicher? Sie möchten sich abmelden.",
+  "graphics": "Grafiken",
+  "results": "Ergebnisse",
+  "reports": "Berichte",
+  "error": "Fehler",
+  "loginOrPasswordIsIncorrect": "Login oder Passwort ist falsch"
 }
