--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -3,7 +3,7 @@
   "repetitionInterval": "Intervalo de repetición",
   "doNotRepeat": "No repetir",
   "everyDay": "todo el dia",
-   "name": " nombre ",
+  "name": " nombre ",
   "nameOfExpense": "Nombre del gasto",
   "selectCategories": "Seleccionar categorías",
   "categories": "Categorías",
@@ -17,7 +17,7 @@
   "unitPrice": "Precio unitario",
   "unitOfMeasurements": "Unidad de medidas",
   "noUnitOfMeasurements": "Sin unidad de medida",
- "save": "Guardar",
+  "save": "Guardar",
   "addEmployee": "Agregar Empleado",
   "enterYourName": "Ingresa tu nombre",
   "changeAdminPassword": "Cambiar contraseña de administrador",
@@ -30,8 +30,8 @@
   "clearData": "Borrar datos",
   "areYouSureYouWantToClearAllData": "¿Está seguro de que desea borrar todos los datos?",
   "login": "Iniciar sesión",
-  "userName":"Nombre de usuario",
-  "password":  "Contraseña",
+  "userName": "Nombre de usuario",
+  "password": "Contraseña",
   "orSignInAs": "O iniciar sesión como",
   "adminMaine": "Administrador Maine",
   "enterYourLastName": "Ingresa tu apellido",
@@ -50,7 +50,7 @@
   "totalPriceServicePerDay": "Precio Total Servicio por día",
   "saveEmployee": "Guardar Empleado",
   "numberOfServiceForMonth": "Número de servicios por mes",
-  "hello":"Hola hola",
+  "hello": "Hola hola",
   "addReport": "Agregar Informe",
   "nameOfClient": "Nombre del Cliente",
   "lastNameOfClient": "Apellido del Cliente",
@@ -62,7 +62,7 @@
   "selectService": "Seleccionar Servicio",
   "priceOfService": "Precio del Servicio",
   "price": "Precio",
-  "submit":"enviar",
+  "submit": "enviar",
   "addService": "Agregar Servicio",
   "createOrSelectACategory": "Crear o seleccionar una categoría",
   "orCreateANewCategory": "O crear una nueva categoría",
@@ -81,8 +81,8 @@
   "exit": "Salir",
   "areYouSureYouWantToExitTheApp": "¿Estás seguro? Quieres salir de la aplicación.",
   "exitApp": "Salir de la aplicación",
-  "yes":"Sí",
-  "no":"no",
+  "yes": "Sí",
+  "no": "no",
   "costsFilter": "Filtro de Costos",
   "clear": "Borrar",
   "nameOfCost": "Nombre del costo",
@@ -92,8 +92,8 @@
   "applyFilter": "Aplicar filtro",
   "cancel": "Cancelar",
   "confirm": "Confirmar",
-   "all":"todo",
-    "done":"hecho",
+  "all": "todo",
+  "done": "hecho",
   "newPassword": "Nueva Contraseña",
   "editCategory": "Editar categoría",
   "editService": "Editar servicio",
@@ -133,41 +133,50 @@
   "relatedncategories": "Categorías\nrelacionadas",
   "deductednfromTax": "Deducido\nDe IMPUESTOS",
   "systematicnexpenditure": "Sistemamatic\nGasto",
- "deleteCost": "Eliminar Costo",
- "areYouSureYouWantToDeleteThisCost": "¿Está seguro de que desea eliminar este costo?",
- "noData": "Sin datos",
- "regncus": "Reg\nCus",
- "cardnpay": "Tarjeta\nPagar",
- "employeendata": "Empleado\nDatos",
- "customerndata": "Cliente\nDatos",
- "newncus": "Nuevo\nCus",
- "total": "total",
- "deleted": "Eliminado",
- "itemDeleted": "Elemento eliminado",
- "deleteCategory": "Eliminar categoría",
- "areYouSureYouWantToDeleteThisCategory": "¿Está seguro de que desea eliminar esta categoría?",
- "deleteService": "Eliminar servicio",
- "areYouSureYouWantToDeleteThisService": "¿Está seguro de que desea eliminar este servicio?",
- "noServicesFoundnpleaseAddANewService": "No se encontraron servicios\nPor favor agregue un nuevo servicio",
- "backupRestoredSuccessfully": "¡Copia de seguridad restaurada exitosamente!",
- "reloadApp": "Recargar aplicación",
- "restoringDatabase": "Restaurando base de datos...",
- "exported": "Exportado",
- "checkYourFileInTheDownloadsFolder": "Revisa tu archivo en la carpeta Descargas",
- "selectTheDatabaseToRestore": "Seleccione la base de datos para restaurar",
- "reportssalesTracker": "Reportes/Rastreador de Ventas",
- "costsTracker": "Rastreador de Costos",
- "clearDates": "Borrar fechas",
- "anErrorOccurred": "Ocurrió un error",
- "noDataFound": "No se encontraron datos",
- "masternname": "Maestro\nNombre",
- "noRegnclient": "No. Reg\nCliente",
- "noNewnclient": "Nº Nuevo\nCliente",
- "noOfnservices": "Nº de\nservicios",
- "cost": "costo",
- "newnclient": "Nuevo\nCliente",
- "regnclient": "Reg\nCliente",
- "numOfnservices": "Núm. de\nServicios",
- "costs": "costos",
- "sales": "Ventas"
+  "deleteCost": "Eliminar Costo",
+  "areYouSureYouWantToDeleteThisCost": "¿Está seguro de que desea eliminar este costo?",
+  "noData": "Sin datos",
+  "regncus": "Reg\nCus",
+  "cardnpay": "Tarjeta\nPagar",
+  "employeendata": "Empleado\nDatos",
+  "customerndata": "Cliente\nDatos",
+  "newncus": "Nuevo\nCus",
+  "total": "total",
+  "deleted": "Eliminado",
+  "itemDeleted": "Elemento eliminado",
+  "deleteCategory": "Eliminar categoría",
+  "areYouSureYouWantToDeleteThisCategory": "¿Está seguro de que desea eliminar esta categoría?",
+  "deleteService": "Eliminar servicio",
+  "areYouSureYouWantToDeleteThisService": "¿Está seguro de que desea eliminar este servicio?",
+  "noServicesFoundnpleaseAddANewService": "No se encontraron servicios\nPor favor agregue un nuevo servicio",
+  "backupRestoredSuccessfully": "¡Copia de seguridad restaurada exitosamente!",
+  "reloadApp": "Recargar aplicación",
+  "restoringDatabase": "Restaurando base de datos...",
+  "exported": "Exportado",
+  "checkYourFileInTheDownloadsFolder": "Revisa tu archivo en la carpeta Descargas",
+  "selectTheDatabaseToRestore": "Seleccione la base de datos para restaurar",
+  "reportssalesTracker": "Reportes/Rastreador de Ventas",
+  "costsTracker": "Rastreador de Costos",
+  "clearDates": "Borrar fechas",
+  "anErrorOccurred": "Ocurrió un error",
+  "noDataFound": "No se encontraron datos",
+  "masternname": "Maestro\nNombre",
+  "noRegnclient": "No. Reg\nCliente",
+  "noNewnclient": "Nº Nuevo\nCliente",
+  "noOfnservices": "Nº de\nservicios",
+  "cost": "costo",
+  "newnclient": "Nuevo\nCliente",
+  "regnclient": "Reg\nCliente",
+  "numOfnservices": "Núm. de\nServicios",
+  "costs": "costos",
+  "sales": "Ventas",
+  "pleaseAddACategoryFirstToAddAnEmployee": "Agregue primero una categoría para agregar un empleado",
+  "addCategoryFirst": "Agregar categoría primero",
+  "logout": "Cerrar sesión",
+  "areYouSureYouWantToLogout": "¿Estás seguro? Quieres cerrar sesión.",
+  "graphics": "Gráficos",
+  "results": "Resultados",
+  "reports": "Informes",
+  "error": "Error",
+  "loginOrPasswordIsIncorrect": "El inicio de sesión o la contraseña son incorrectos"
 }
