--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -2,7 +2,7 @@
   "addCost": "Добавить стоимость",
   "repetitionInterval": "Интервал повторения",
   "doNotRepeat": "Не повторять",
-   "everyDay":"каждый день",
+  "everyDay": "каждый день",
   "name": "Имя",
   "nameOfExpense": "Название расхода",
   "selectCategories": "Выбрать категории",
@@ -50,7 +50,7 @@
   "totalPriceServicePerDay": "Общая стоимость услуги за день",
   "saveEmployee": "Сохранить сотрудника",
   "numberOfServiceForMonth": "Количество услуг за месяц",
-    "hello":"привет, ",
+  "hello": "привет, ",
   "addReport": "Добавить отчет",
   "nameOfClient": "Имя клиента",
   "lastNameOfClient": "Фамилия клиента",
@@ -82,7 +82,7 @@
   "areYouSureYouWantToExitTheApp": "Вы уверены? Вы хотите выйти из приложения.",
   "exitApp": "Выйти из приложения",
   "yes": "Да",
-  "no":"нет",
+  "no": "нет",
   "costsFilter": "Фильтр затрат",
   "clear": "Очистить",
   "nameOfCost": "Название стоимости",
@@ -93,7 +93,7 @@
   "cancel": "Отмена",
   "confirm": "Подтвердить",
   "all": "Все",
-    "done":"сделано",
+  "done": "сделано",
   "newPassword": "Новый пароль",
   "editCategory": "Редактировать категорию",
   "editService": "Редактировать сервис",
@@ -133,41 +133,50 @@
   "relatedncategories": "Связанные\nКатегории",
   "deductednfromTax": "Вычтено\nиз налога",
   "systematicnexpenditure": "Системаматематические\nРасходы",
- "deleteCost": "Удалить стоимость",
- "areYouSureYouWantToDeleteThisCost": "Вы уверены, что хотите удалить эту стоимость?",
- "noData": "Нет данных",
- "regncus": "Reg\nCus",
- "cardnpay": "Карта\nPay",
- "employeendata": "Данные о сотруднике\n",
- "customerndata": "Данные клиента\n",
- "newncus": "Новый\nCus",
- "total": "Итого",
- "deleted": "Удален",
- "itemDeleted": "Элемент удален",
- "deleteCategory": "Удалить категорию",
- "areYouSureYouWantToDeleteThisCategory": "Вы уверены, что хотите удалить эту категорию?",
- "deleteService": "Удалить службу",
- "areYouSureYouWantToDeleteThisService": "Вы уверены, что хотите удалить эту службу?",
- "noServicesFoundnpleaseAddANewService": "Службы не найдены\nПожалуйста, добавьте новую службу",
- "backupRestoredSuccessfully": "Резервная копия успешно восстановлена!",
- "reloadApp": "Перезагрузить приложение",
- "restoringDatabase": "Восстановление базы данных...",
- "exported": "Экспортировано",
- "checkYourFileInTheDownloadsFolder": "Проверьте свой файл в папке Загрузки",
- "selectTheDatabaseToRestore": "Выберите базу данных для восстановления",
- "reportssalesTracker": "Отчеты/Отслеживание продаж",
- "costsTracker": "Отслеживание затрат",
- "clearDates": "Очистить даты",
- "anErrorOccurred": "Произошла ошибка",
- "noDataFound": "Данные не найдены",
- "masternname": "Мастер\nИмя",
- "noRegnclient": "Нет. Reg\nClient",
- "noNewnclient": "Нет. Новый\nКлиент",
- "noOfnservices": "Нет\nуслуг",
- "cost": "Стоимость",
- "newnclient": "Новый\nКлиент",
- "regnclient": "Регистр\nКлиент",
- "numOfnservices": "Количество\nУслуг",
- "costs": "расходы",
- "sales": "Продажи"
+  "deleteCost": "Удалить стоимость",
+  "areYouSureYouWantToDeleteThisCost": "Вы уверены, что хотите удалить эту стоимость?",
+  "noData": "Нет данных",
+  "regncus": "Reg\nCus",
+  "cardnpay": "Карта\nPay",
+  "employeendata": "Данные о сотруднике\n",
+  "customerndata": "Данные клиента\n",
+  "newncus": "Новый\nCus",
+  "total": "Итого",
+  "deleted": "Удален",
+  "itemDeleted": "Элемент удален",
+  "deleteCategory": "Удалить категорию",
+  "areYouSureYouWantToDeleteThisCategory": "Вы уверены, что хотите удалить эту категорию?",
+  "deleteService": "Удалить службу",
+  "areYouSureYouWantToDeleteThisService": "Вы уверены, что хотите удалить эту службу?",
+  "noServicesFoundnpleaseAddANewService": "Службы не найдены\nПожалуйста, добавьте новую службу",
+  "backupRestoredSuccessfully": "Резервная копия успешно восстановлена!",
+  "reloadApp": "Перезагрузить приложение",
+  "restoringDatabase": "Восстановление базы данных...",
+  "exported": "Экспортировано",
+  "checkYourFileInTheDownloadsFolder": "Проверьте свой файл в папке Загрузки",
+  "selectTheDatabaseToRestore": "Выберите базу данных для восстановления",
+  "reportssalesTracker": "Отчеты/Отслеживание продаж",
+  "costsTracker": "Отслеживание затрат",
+  "clearDates": "Очистить даты",
+  "anErrorOccurred": "Произошла ошибка",
+  "noDataFound": "Данные не найдены",
+  "masternname": "Мастер\nИмя",
+  "noRegnclient": "Нет. Reg\nClient",
+  "noNewnclient": "Нет. Новый\nКлиент",
+  "noOfnservices": "Нет\nуслуг",
+  "cost": "Стоимость",
+  "newnclient": "Новый\nКлиент",
+  "regnclient": "Регистр\nКлиент",
+  "numOfnservices": "Количество\nУслуг",
+  "costs": "расходы",
+  "sales": "Продажи",
+  "pleaseAddACategoryFirstToAddAnEmployee": "Чтобы добавить сотрудника, сначала добавьте категорию",
+  "addCategoryFirst": "Сначала добавьте категорию",
+  "logout": "Выход",
+  "areYouSureYouWantToLogout": "Вы уверены? Вы хотите выйти из системы.",
+  "graphics": "Графика",
+  "results": "Результаты",
+  "reports": "Отчеты",
+  "error": "Ошибка",
+  "loginOrPasswordIsIncorrect": "Логин или пароль неверен"
 }
