--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -50,7 +50,7 @@
   "totalPriceServicePerDay": "Загальна вартість послуги за день",
   "saveEmployee": "Зберегти працівника",
   "numberOfServiceForMonth": "Кількість послуг за місяць",
-    "hello":" привіт, ",
+  "hello": " привіт, ",
   "addReport": "Додати звіт",
   "nameOfClient": "Ім'я клієнта",
   "lastNameOfClient": "Прізвище клієнта",
@@ -81,8 +81,8 @@
   "exit": "Вихід",
   "areYouSureYouWantToExitTheApp": "Ви впевнені? Ви хочете вийти з програми.",
   "exitApp": "Вийти з програми",
-  "yes":"Так",
-  "no":"ні",
+  "yes": "Так",
+  "no": "ні",
   "costsFilter": "Фільтр витрат",
   "clear": "Очистити",
   "nameOfCost": "Назва вартості",
@@ -133,41 +133,50 @@
   "relatedncategories": "Пов'язані\nкатегорії",
   "deductednfromTax": "Вираховано\nз ПОДАТКУ",
   "systematicnexpenditure": "Систmatic\nВитрати",
- "deleteCost": "Видалити вартість",
- "areYouSureYouWantToDeleteThisCost": "Ви впевнені, що хочете видалити цю вартість?",
- "noData": "Немає даних",
- "regncus": "Рег\nCus",
- "cardnpay": "Картка\nОплата",
- "employeendata": "Дані\nпрацівника",
- "customerndata": "Дані\nклієнта",
- "newncus": "Новий\nCus",
- "total": "Усього",
- "deleted": "Видалено",
- "itemDeleted": "Елемент видалено",
- "deleteCategory": "Видалити категорію",
- "areYouSureYouWantToDeleteThisCategory": "Ви впевнені, що хочете видалити цю категорію?",
- "deleteService": "Видалити службу",
- "areYouSureYouWantToDeleteThisService": "Ви впевнені, що хочете видалити цю службу?",
- "noServicesFoundnpleaseAddANewService": "Служби не знайдено\nДодайте нову службу",
- "backupRestoredSuccessfully": "Резервну копію успішно відновлено!",
- "reloadApp": "Перезавантажити програму",
- "restoringDatabase": "Відновлення бази даних...",
- "exported": "Експортовано",
- "checkYourFileInTheDownloadsFolder": "Перевірте свій файл у папці завантажень",
- "selectTheDatabaseToRestore": "Виберіть базу даних для відновлення",
- "reportssalesTracker": "Звіти/відстеження продажів",
- "costsTracker": "Відстеження витрат",
- "clearDates": "Очистити дати",
- "anErrorOccurred": "Сталася помилка",
- "noDataFound": "Дані не знайдено",
- "masternname": "Головне\nім'я",
- "noRegnclient": "Номер Reg\nClient",
- "noNewnclient": "Ні. Новий\nклієнт",
- "noOfnservices": "Кількість\nслужб",
- "cost": "Вартість",
- "newnclient": "Новий\nклієнт",
- "regnclient": "Реєстраційний\nклієнт",
- "numOfnservices": "Кількість\nслужб",
- "costs": "витрати",
- "sales": "Продажі"
+  "deleteCost": "Видалити вартість",
+  "areYouSureYouWantToDeleteThisCost": "Ви впевнені, що хочете видалити цю вартість?",
+  "noData": "Немає даних",
+  "regncus": "Рег\nCus",
+  "cardnpay": "Картка\nОплата",
+  "employeendata": "Дані\nпрацівника",
+  "customerndata": "Дані\nклієнта",
+  "newncus": "Новий\nCus",
+  "total": "Усього",
+  "deleted": "Видалено",
+  "itemDeleted": "Елемент видалено",
+  "deleteCategory": "Видалити категорію",
+  "areYouSureYouWantToDeleteThisCategory": "Ви впевнені, що хочете видалити цю категорію?",
+  "deleteService": "Видалити службу",
+  "areYouSureYouWantToDeleteThisService": "Ви впевнені, що хочете видалити цю службу?",
+  "noServicesFoundnpleaseAddANewService": "Служби не знайдено\nДодайте нову службу",
+  "backupRestoredSuccessfully": "Резервну копію успішно відновлено!",
+  "reloadApp": "Перезавантажити програму",
+  "restoringDatabase": "Відновлення бази даних...",
+  "exported": "Експортовано",
+  "checkYourFileInTheDownloadsFolder": "Перевірте свій файл у папці завантажень",
+  "selectTheDatabaseToRestore": "Виберіть базу даних для відновлення",
+  "reportssalesTracker": "Звіти/відстеження продажів",
+  "costsTracker": "Відстеження витрат",
+  "clearDates": "Очистити дати",
+  "anErrorOccurred": "Сталася помилка",
+  "noDataFound": "Дані не знайдено",
+  "masternname": "Головне\nім'я",
+  "noRegnclient": "Номер Reg\nClient",
+  "noNewnclient": "Ні. Новий\nклієнт",
+  "noOfnservices": "Кількість\nслужб",
+  "cost": "Вартість",
+  "newnclient": "Новий\nклієнт",
+  "regnclient": "Реєстраційний\nклієнт",
+  "numOfnservices": "Кількість\nслужб",
+  "costs": "витрати",
+  "sales": "Продажі",
+  "pleaseAddACategoryFirstToAddAnEmployee": "Спочатку додайте категорію, щоб додати працівника",
+  "addCategoryFirst": "Додати категорію спочатку",
+  "logout": "Вийти",
+  "areYouSureYouWantToLogout": "Ви впевнені? Ви хочете вийти.",
+  "graphics": "Графіка",
+  "results": "Результати",
+  "reports": "Звіти",
+  "error": "Помилка",
+  "loginOrPasswordIsIncorrect": "Логін або пароль неправильні"
 }
